# ecg_service

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
migrations/: 1_create_tables.sql
scripts/: localstack_bootstrap.sh
src/: logger_config.py  main.py  main_api.py  main_consumer.py
src/application/: create_ecg_use_case.py  get_insights_use_case.py  process_ecg_use_case.py  settings.py  user_use_case.py
src/domain/: count_zero_crossings_service.py  message_service.py  messages.py  model.py  repository.py
src/infrastructure/: controllers.py  jwt_auth.py  postgres_repository.py  providers.py  sqs_message_service.py
tests/: e2e_test.py  zero_crossings_unit_test.py
