[tool.poetry]
name = "ecg-service"
version = "0.1.0"
description = ""
authors = ["Joan Barba <joanbarba@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
